# manipulator_core

./: CMakeLists.txt  LICENSE  README.md  package.xml
arduino/MultiStepperTest/: MultiStepperTest.ino
arduino/manipulator_doser/: Manipulator.h  Titrator.cpp  Titrator.h  manipulator_doser.ino
arduino/manipulator_unscrewer/: Manipulator.h  manipulator_unscrewer.ino
msg/: ArmCurrentPosition.msg  ArmJointAngle.msg  DoserStatus.msg  FloatArray.msg
scripts/: manipulator_1_node.py  manipulator_2_node.py
