<?xml version="1.0"?>
<package format="2">
  <name>manipulator_core</name>
  <version>0.0.0</version>
  <description>The manipulator package</description>

  <maintainer email="ksrve@mail.ru">ksrve</maintainer>
  
  <author>Ivan Kirilenko</author>
  <author>Artemii Zenkin</author>
  <author>Nikolaev Aleksandr</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
  </export>
</package>
